--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,4 @@
+
 spring:
   profiles:
     active: dev
@@ -19,3 +20,6 @@ spring:
         - 192.168.0.112:7005
         - 192.168.0.112:7006
     timeout: 5000
+
+server:
+  port: 8081
