--- a/src/main/resources/queue.properties
+++ b/src/main/resources/queue.properties
@@ -1,6 +1,6 @@
 request.queue.corePoolSize=10
-request.queue.maximumPoolSize=10
+request.queue.maximumPoolSize=20
 request.queue.keepAliveTime=60
-# 时间单位, e.g : SECONDS ,MILLISECONDS,DAYS,HOURS
+#鏃堕棿鍗曚綅  e.g : SECONDS ,MILLISECONDS,DAYS,HOURS
 request.queue.timeUnit=SECONDS
 
