--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,10 @@
-rootProject.name = 'eshop-inventory'
+pluginManagement {
+    resolutionStrategy {
+    }
+    repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+        gradlePluginPortal()
+    }
+}
 
+rootProject.name = 'eshop-inventory'
