--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 
 plugins {
     id "java"
+    id "io.spring.dependency-management" version "1.0.8.RELEASE"
     id "org.springframework.boot" version "1.5.10.RELEASE"
 }
 
