--- a/build.gradle
+++ b/build.gradle
@@ -17,18 +17,12 @@ buildscript {
 
 plugins {
     id "java"
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
-    id "org.springframework.boot" version "1.5.10.RELEASE"
+    id "org.springframework.boot" version "1.5.10.RELEASE" apply false
+    id "io.spring.dependency-management" version "1.0.9.RELEASE"
 }
-
 
 group 'org.eshop'
 version '1.0.0-SNAPSHOT'
-
-
-springBoot {
-    buildInfo()
-}
 
 sourceSets {
     main {
@@ -46,13 +40,11 @@ jar {
 }
 
 // java编译的时候缺省状态下会因为中文字符而失败
-compileJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
 compileJava {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
     options.encoding = 'UTF-8'
-    dependsOn(processResources)
 }
 
 test {
@@ -85,11 +77,10 @@ dependencies {
     )
 
     testCompile(
+            "org.springframework.boot:spring-boot-starter-web:${springBootVersion}",
             'org.junit.platform:junit-platform-launcher:1.2.0',
             'org.junit.jupiter:junit-jupiter-engine:5.2.0',
             'org.junit.vintage:junit-vintage-engine:5.2.0'
     )
-
-    testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 
 }
