--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 plugins {
     id "java"
-    id "org.springframework.boot" version "1.5.10.RELEASE" apply false
+    id "org.springframework.boot" version "1.5.10.RELEASE"
     id "io.spring.dependency-management" version "1.0.9.RELEASE"
 }
 
